Don't use STATIC_URL directly in templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="{% static 'google-code-prettify/prettify.css' %}" type="text/css"/>
         <link rel="stylesheet" href="{% static 'selectize/dist/css/selectize.bootstrap3.css' %}" data-theme="bootstrap3">
         <link rel="stylesheet" href="{% static 'own-style/own.css' %}" data-theme="bootstrap3">
-        <link rel="stylesheet" href="{{ STATIC_URL }}/ksp_login/css/base.css" type="text/css" />
+        <link rel="stylesheet" href="{% static 'ksp_login/css/base.css' %}" type="text/css" />
 
         <title>Programátorská liaheň | {% block title %}{% endblock title %}</title>
 
